--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,28 @@
 <h1>Make your form here</h1>
+
+
+<form action="/pirates" method="post">
+
+    <p><label> New Name</label>
+    <input name="pirate[name]"/>
+    <label> New height</label>
+    <input name="pirate[height]"/>
+    <label> New weight</label>
+    <input name="pirate[weight]"/></p>
+
+    <p><label> Ship1 name</label>
+    <input name="pirate[ships][][name]">
+    <label> Ship1 type</label>
+    <input name="pirate[ships][][booty]">
+    <label> Ship1 booty</label>
+    <input name="pirate[ships][][type]"></p>
+
+   <p> <label> Ship2 name</label>
+    <input name="pirate[ships][][name]">
+    <label> Ship2 type</label>
+    <input name="pirate[ships][][booty]">
+    <label> Ship2 booty</label>
+    <input name="pirate[ships][][type]"></p>
+
+    <button>Create</button>
+</form>
