--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,8 @@
 <h1>Display your Pirate here</h1>
-
-
+<%= @pirate.name %> <%= @pirate.height %> <%= @pirate.weight %>
 <h2>Display your first ship here</h2>
-
+<%= @ship1.name %> <%= @ship1.booty %> <%= @ship1.type %>
 
 <h2>Display your second ship here</h2>
+<%= @ship2.name %> <%= @ship2.booty %> <%= @ship2.type %>
+
