--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,28 +1,25 @@
-<h1>Make your form here</h1>
+<form action='/pirates' method="POST">
+  <h2>Pirate</h2>
+  <label for="pirate_name">Name</label><br>
+  <input id="pirate_name" type="text" name="pirate[name]" /><br>
+  <label for="pirate_weight">Weight</label><br>
+  <input id="pirate_weight" type="text" name="pirate[weight]" /><br>
+  <label for="pirate_height">Height</label><br>
+  <input id="pirate_height" type="text" name="pirate[height]" /><br><br>
 
+  <h2>Ship(s)</h2>
+  <label for="ship_name_1">Name</label><br>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_1">Type</label><br>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" /><br><br>
 
-<form action="/pirates" method="post">
-
-    <p><label> New Name</label>
-    <input name="pirate[name]"/>
-    <label> New height</label>
-    <input name="pirate[height]"/>
-    <label> New weight</label>
-    <input name="pirate[weight]"/></p>
-
-    <p><label> Ship1 name</label>
-    <input name="pirate[ships][][name]">
-    <label> Ship1 type</label>
-    <input name="pirate[ships][][booty]">
-    <label> Ship1 booty</label>
-    <input name="pirate[ships][][type]"></p>
-
-   <p> <label> Ship2 name</label>
-    <input name="pirate[ships][][name]">
-    <label> Ship2 type</label>
-    <input name="pirate[ships][][booty]">
-    <label> Ship2 booty</label>
-    <input name="pirate[ships][][type]"></p>
-
-    <button>Create</button>
+  <label for="ship_name_2">Name</label><br>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_booty_2">Type</label><br>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" /><br>
+  <input type="submit" value="Submit">
 </form>
